--- a/index.html
+++ b/index.html
@@ -1,30 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-
-    <img src="images/fighter.jpg" alt="Bhargav's profile image" width="280" height="250">
-    <h1>Bhargav kumar</h1>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="images/fighter.jpg" alt="Bhargav's profile image" width="280" height="250"></td>
+            <td>
+                <h1>Bhargav kumar</h1>
+                <p>Aerospace Engineer</p>
+                <p>Sr. Software Development Engineer in Test</p>
+            </td>
+        </tr>
+    </table>
     <hr>
-
-    <p>Aerospace Engineer</p>
-    <p>Software Development Engineer in Test</p>
-    <p>Fighter</p>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <tr>
+            <td>FrontEnd Automation</td>
+            <td>&#11088; &#11088; &#11088; &#11088; &#11088;</td>
+        </tr>
+        <tr>
+            <td>Backend Automation</td>
+            <td>&#11088; &#11088; &#11088; &#11088; &#11088;</td>
+        </tr>
+        <tr>
+            <td>Performance Testing</td>
+            <td>&#11088; &#11088; &#11088;</td>
+        </tr>
+    </table>
 
     <hr>
-    <h3>Contact-me</h3>
-    <p>Email: ch.bhargavkumar500@gmail.com</p>
-    <p>Phone number: 9030759065</p>
-    <hr>
+   
     <h3>Hobbies</h3>
     <ul>
         <li>Photography</li>
         <li>Boxing</li>
     </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2020-till date</td>
+                <td>Sr. Software Development Engineer in Test</td>
+            </tr>
+            <tr>
+                <td>2018-2020</td>
+                <td>Sr.Test Automation Engineer</td>
+            </tr>
+        </tbody>
+    </table>
+    <a href="contact-me.html">Contact Me</a>
 </body>
+
 </html>
