--- a/index.html
+++ b/index.html
@@ -5,68 +5,166 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhargav kumar - Sr.SDET</title>
+    <title>Bhargav Kumar - Sr.SDET</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-
 </head>
 
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td><img src="images/fighter.jpg" alt="Bhargav's profile image" width="280" height="250"></td>
-            <td>
-                <h1>Bhargav kumar</h1>
-                <p>Aerospace Engineer</p>
-                <p>Sr. Software Development Engineer in Test</p>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-        <tr>
-            <td>FrontEnd Automation</td>
-            <td>&#11088; &#11088; &#11088; &#11088; &#11088;</td>
-        </tr>
-        <tr>
-            <td>Backend Automation</td>
-            <td>&#11088; &#11088; &#11088; &#11088; &#11088;</td>
-        </tr>
-        <tr>
-            <td>Performance Testing</td>
-            <td>&#11088; &#11088; &#11088;</td>
-        </tr>
-    </table>
+    <div class="top-container">
+        <h1>Bhargava Kumar</h1>
+        <p>Sr.Software Development Engineer in Test</p>
+        <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
+    </div>
+    <div class="middle-container">
 
-    <hr>
-   
-    <h3>Hobbies</h3>
-    <ul>
-        <li>Photography</li>
-        <li>Boxing</li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-        <thead>
-            <tr>
-                <th>Dates</th>
-                <th>Work</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2020-till date</td>
-                <td>Sr. Software Development Engineer in Test</td>
-            </tr>
-            <tr>
-                <td>2018-2020</td>
-                <td>Sr.Test Automation Engineer</td>
-            </tr>
-        </tbody>
-    </table>
-    <a href="contact-me.html">Contact Me</a>
+    </div>
+    <div class="bottom-container">
+
+    </div>
+    <div id="experiences" class="container">
+        <h2>Work Experience</h2>
+        <hr>
+        <h3>Careers</h3>
+        <div class="experiences">
+
+            <div class="experience row">
+                <div class="col-md-4">
+                    <h4>Unify Technologies</h4>
+                    <p>May 2020 to Till Date</p>
+
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>Full Time - Sr. Software Development Engineer in Test</strong>
+                        <span class="hidden-phone experience-summary">
+                            Working as a Senior Software Development Engineer in Test in Unify Technologies, working for
+                            StockX E commerce. The application is Laravel based and as a team we are working in a fully
+                            scrum
+                            way.
+                        </span>
+                        <span class="experience-details">
+                            <span class="location">
+                                <span>Hyderabad</span>
+                                <span class="separator">|</span>
+                                <span class="link">
+                                    <span></span>
+                                    <a href="https://unifytech.com/home" target="_blank">https://unifytech.com/home</a>
+                                </span>
+                            </span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id=technicalSkills class="container">
+
+        <h2>Technical Skills</h2>
+        <hr>
+        <h3>Skills</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <ul class="no-bullets">
+                    <li>
+                        <span class="skills-title">Java</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Javascript</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Typescript</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Python</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Selenium Webdriver</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Appium</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">WebdriverIO</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Cucumber BDD</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Puppeteer</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Cypress</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Protractor</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Robot Framework</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Serenity</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <ul class="no-bullets">
+                    <li>
+                        <span class="skills-title">NodeJS</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="skills-title">Python</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
