Added bachelors degree details

--- a/index.html
+++ b/index.html
@@ -23,6 +23,67 @@
     <div class="bottom-container">
 
     </div>
+    <div id="education" class="container">
+        <h2>Education</h2>
+        <div class="academics">
+            <hr>
+            <div class="academic row">
+                <div class="col-md-4">
+                    <h4>MNR College of Engg & Tech</h4>
+                    <p>Affiliated to  <a style="color: #22A39F; text-decoration: none;" href="https://jntuh.ac.in/">JNTUH</a></p>
+                    <p>Oct 2010 to July 2014</p>
+                    <p>Full Time</p>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>Aeronautical Engineering</strong>
+                        <span class="hidden-phone academic-summary">
+                            
+                        </span>
+                        <span class="academic-details">
+                            <span class="location">
+                                <span>Hyderabad</span>
+                                <span class="separator">|</span>
+                                <span class="link">
+                                    <span></span>
+                                    <a href="https://mnrcet.mnrindia.org/" target="_blank">https://mnrcet.mnrindia.org/</a>
+                                </span>
+                            </span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+
+            <!-- <div class="academic row">
+                <div class="col-md-4">
+                    <h4>Narayana Jr. College</h4>
+                    <p>Andhra Pradesh Board of Secondary Education</p>
+                    <p>June 2008 to May 2010</p>
+                    <p>Full Time</p>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>MPC - Maths, Physics and Chemistry</strong>
+                        <span class="hidden-phone academic-summary">
+                            
+                        </span>
+                        <span class="academic-details">
+                            <span class="location">
+                                <span>Hyderabad</span>
+                                <span class="separator">|</span>
+                                <span class="link">
+                                    <span></span>
+                                    <a href="https://mnrcet.mnrindia.org/" target="_blank">https://mnrcet.mnrindia.org/</a>
+                                </span>
+                            </span>
+                        </span>
+                    </p>
+                </div>
+            </div> -->
+
+        </div>
+    </div>
+
     <div id="experiences" class="container">
         <h2>Work Experience</h2>
         <hr>
@@ -33,16 +94,14 @@
                 <div class="col-md-4">
                     <h4>Unify Technologies</h4>
                     <p>May 2020 to Till Date</p>
-
+                    <p>Full Time</p>
                 </div>
                 <div class="col-md-8">
                     <p>
-                        <strong>Full Time - Sr. Software Development Engineer in Test</strong>
+                        <strong>Sr. Software Development Engineer in Test</strong>
                         <span class="hidden-phone experience-summary">
                             Working as a Senior Software Development Engineer in Test in Unify Technologies, working for
-                            StockX E commerce. The application is Laravel based and as a team we are working in a fully
-                            scrum
-                            way.
+                            StockX E commerce.
                         </span>
                         <span class="experience-details">
                             <span class="location">
@@ -51,6 +110,62 @@
                                 <span class="link">
                                     <span></span>
                                     <a href="https://unifytech.com/home" target="_blank">https://unifytech.com/home</a>
+                                </span>
+                            </span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="experience row">
+                <div class="col-md-4">
+                    <h4>Zen Quality Assurance Pvt. Ltd.</h4>
+                    <p>Aug 2018 to May 2020</p>
+                    <p>Full Time</p>
+
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>Sr. Test Automation Engineer</strong>
+                        <span class="hidden-phone experience-summary">
+                            Worked as a Senior Test Automation Engineer in ZenQ, worked for several projects including
+                            retail and Ecommerce applications
+                        </span>
+                        <span class="experience-details">
+                            <span class="location">
+                                <span>Hyderabad</span>
+                                <span class="separator">|</span>
+                                <span class="link">
+                                    <span></span>
+                                    <a href="https://www.zenq.com/" target="_blank">https://www.zenq.com/</a>
+                                </span>
+                            </span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="experience row">
+                <div class="col-md-4">
+                    <h4>Handssys Tecnologies Pvt. Ltd.</h4>
+                    <p>May 2015 to July 31</p>
+                    <p>Full Time</p>
+
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>Test Engineer</strong>
+                        <span class="hidden-phone experience-summary">
+                            Started career in this organization as a Test Associate, and promoted to Test Engineer.
+                            Worked on health care project
+                        </span>
+                        <span class="experience-details">
+                            <span class="location">
+                                <span>Hyderabad</span>
+                                <span class="separator">|</span>
+                                <span class="link">
+                                    <span></span>
+                                    <a href="http://handssys.com/" target="_blank">http://handssys.com/</a>
                                 </span>
                             </span>
                         </span>
