Updated project profiles

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <div class="project row">
                 <div class="col-md-4">
                     <h4>AudienceView</h4>
-                    <p>Oct 2019 to May 2020</p>
+                    <p>Nov 2018 to May 2020</p>
                     <p>Full Time</p>
                 </div>
                 <div class="col-md-8">
@@ -609,32 +609,6 @@
                         </span>
                     </p>
                     <img style="height: 150px; width: 350px;" src="images/projects/Audienceview.png" alt="StockX">
-                </div>
-            </div>
-            <div class="project row">
-                <div class="col-md-4">
-                    <h4>TheaterMania</h4>
-                    <p>Sep 2018 to Oct 2019</p>
-                    <p>Full Time</p>
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        <strong>Sr. Test Automation Engineer</strong>
-                        <span class="hidden-phone project-summary">
-                            
-                        </span>
-                        <span class="project-details">
-                            <span class="location">
-                                <span>Hyderabad</span>
-                                <span class="separator">|</span>
-                                <span class="link">
-                                    <span></span>
-                                    <a href="https://www.theatermania.com/"
-                                        target="_blank">https://www.theatermania.com/</a>
-                                </span>
-                            </span>
-                        </span>
-                    </p>
                 </div>
             </div>
             <div class="project row">
@@ -661,6 +635,7 @@
                             </span>
                         </span>
                     </p>
+                    <img style="height: 150px; width: 350px;" src="images/projects/tableau.png" alt="StockX">
                 </div>
             </div>
             <div class="project row">
@@ -691,6 +666,8 @@
             </div>
         </div>
     </div>
-</body>
-
+</body>    
+<footer>
+   
+</footer>
 </html>
