Added contacts section

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                             </span>
                         </span>
                     </p>
-                    <img style="height: 150px; width: 350px;" src="images/projects/stockx.jpeg" alt="StockX">
+                    <img src="images/projects/stockx.jpeg" alt="StockX">
                 </div>
             </div>
             <div class="project row">
@@ -609,7 +609,7 @@
                             </span>
                         </span>
                     </p>
-                    <img style="height: 150px; width: 350px;" src="images/projects/Audienceview.png" alt="StockX">
+                    <img src="images/projects/Audienceview.png" alt="StockX">
                 </div>
             </div>
             <div class="project row">
@@ -635,7 +635,7 @@
                             </span>
                         </span>
                     </p>
-                    <img style="height: 150px; width: 350px;" src="images/projects/tableau.png" alt="StockX">
+                    <img src="images/projects/tableau.png" alt="StockX">
                 </div>
             </div>
             <div class="project row">
@@ -715,7 +715,7 @@
                         <li>
                             <a href="https://www.linkedin.com/in/bhargav-kumar-00a72a1a7/" target="_blank" style="text-decoration: none">
                                 <span <i class='fa fa-linkedin-square'></i></span>
-                                https://www.linkedin.com/in/bhargav-kumar-00a72a1a7/
+                                https://www.linkedin.com/in/bhargav-kumar
                             </a>
                         </li>
                     </ul>
