Added fontawesome icons for links and locations

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 </head>
 
 <body>
+    <!-- flex-column -->
+    <div class="nav-container">
+        <nav class="nav navbar-light sticky-top">
+            <a class="nav-link active" href="#experiences">Work Experience</a>
+            <a class="nav-link" href="#education">Education</a>
+            <a class="nav-link" href="#technicalSkills">Technical Skills</a>
+            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#contact">Contacts</a>
+        </nav>
+    </div>
     <div class="top-container">
         <h1>Bhargava Kumar</h1>
         <p>Senior Software Development Engineer in Test</p>
@@ -28,9 +38,7 @@
 
     </div>
     <div class="bottom-container">
-
     </div>
-
 
     <div id="experiences" class="container">
         <h2>Work Experience</h2>
@@ -40,7 +48,7 @@
 
             <div class="experience row">
                 <div class="col-md-4">
-                    <h4>Unify Technologies</h4>
+                    <h4>Unify Technologies Pvt Ltd.</h4>
                     <p>May 2020 to Till Date</p>
                     <p>Full Time</p>
                 </div>
@@ -48,16 +56,16 @@
                     <p>
                         <strong>Sr. Software Development Engineer in Test</strong>
                         <span class="hidden-phone experience-summary">
-                            Working as a Senior Software Development Engineer in Test in Unify Technologies, working for
-                            StockX E commerce.
+                            Currently, I am working as a Sr.SDET in UNIFY tech. My current Project is StockX ECommerce.
+                            Using tools and technologies are JavaSCript, Typescript, WebDriverIO, Appium, Puppeteer,
                         </span>
                         <span class="experience-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="https://unifytech.com/home" target="_blank">https://unifytech.com/home</a>
+                                    <a href="https://unifytech.com/home" target="_blank"><i class="fa-solid fa-link"></i>https://unifytech.com/home</a>
                                 </span>
                             </span>
                         </span>
@@ -81,11 +89,11 @@
                         </span>
                         <span class="experience-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="https://www.zenq.com/" target="_blank">https://www.zenq.com/</a>
+                                    <a href="https://www.zenq.com/" target="_blank"><i class="fa-solid fa-link"></i>https://www.zenq.com/</a>
                                 </span>
                             </span>
                         </span>
@@ -109,11 +117,11 @@
                         </span>
                         <span class="experience-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="http://handssys.com/" target="_blank">http://handssys.com/</a>
+                                    <a href="http://handssys.com/" target="_blank"><i class="fa-solid fa-link"></i>http://handssys.com/</a>
                                 </span>
                             </span>
                         </span>
@@ -129,9 +137,9 @@
             <hr>
             <div class="academic row">
                 <div class="col-md-4">
-                    <h4>MNR College of Engg & Tech</h4>
+                    <h4>MNR College of Engineering & Technology</h4>
                     <p>Affiliated to <a style="color: #22A39F; text-decoration: none;"
-                            href="https://jntuh.ac.in/">JNTUH</a></p>
+                            href="https://jntuh.ac.in/"><i class="fa-solid fa-link"></i>JNTUH</a></p>
                     <p>Oct 2010 to July 2014</p>
 
                 </div>
@@ -144,12 +152,12 @@
                         </span>
                         <span class="academic-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
                                     <a href="https://mnrcet.mnrindia.org/"
-                                        target="_blank">https://mnrcet.mnrindia.org/</a>
+                                        target="_blank"><i class="fa-solid fa-link"></i>https://mnrcet.mnrindia.org/</a>
                                 </span>
                             </span>
                         </span>
@@ -173,11 +181,11 @@
                         </span>
                         <span class="academic-details">
                             <span class="location">
-                                <span>Tirupati</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Tirupati</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="https://bie.ap.gov.in/" target="_blank">https://bie.ap.gov.in/</a>
+                                    <a href="https://bie.ap.gov.in/" target="_blank"><i class="fa-solid fa-link"></i>https://bie.ap.gov.in/</a>
                                 </span>
                             </span>
                         </span>
@@ -189,7 +197,7 @@
                 <div class="col-md-4">
                     <h4>Karnataka Secondary Education Examination Board</h4>
                     <p>Affiliated to <a style="color: #22A39F; text-decoration: none;"
-                            href="https://jntuh.ac.in/">JNTUH</a></p>
+                            href="https://jntuh.ac.in/"><i class="fa-solid fa-link"></i>JNTUH</a></p>
                     <p>Oct 2010 to July 2014</p>
                 </div>
                 <div class="col-md-8">
@@ -201,12 +209,12 @@
                         </span>
                         <span class="academic-details">
                             <span class="location">
-                                <span>Bengaluru</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Bengaluru</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
                                     <a href="https://sslc.karnataka.gov.in/english"
-                                        target="_blank">https://sslc.karnataka.gov.in/english</a>
+                                        target="_blank"><i class="fa-solid fa-link"></i>https://sslc.karnataka.gov.in/english</a>
                                 </span>
                             </span>
                         </span>
@@ -573,11 +581,11 @@
                         </span>
                         <span class="project-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="https://stockx.com/" target="_blank">https://stockx.com/</a>
+                                    <a href="https://stockx.com/" target="_blank"><i class="fa-solid fa-link"></i>https://stockx.com/</a>
                                 </span>
                             </span>
                         </span>
@@ -599,12 +607,12 @@
                         </span>
                         <span class="project-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
                                     <a href="https://www.audienceview.com/"
-                                        target="_blank">https://www.audienceview.com/</a>
+                                        target="_blank"><i class="fa-solid fa-link"></i>https://www.audienceview.com/</a>
                                 </span>
                             </span>
                         </span>
@@ -615,7 +623,7 @@
             </div>
             <div class="project row">
                 <div class="col-md-4">
-                    <h4>Data management desktop</h4>
+                    <h4>Data management desktop app</h4>
                     <p>Aug 2018 to Oct 2018</p>
                     <p>Full Time</p>
                 </div>
@@ -627,11 +635,11 @@
                         </span>
                         <span class="project-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="https://www.tableau.com/" target="_blank">https://www.tableau.com/</a>
+                                    <a href="https://www.tableau.com/" target="_blank"><i class="fa-solid fa-link"></i>https://www.tableau.com/</a>
                                 </span>
                             </span>
                         </span>
@@ -653,11 +661,11 @@
                         </span>
                         <span class="project-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="http://handssys.com/" target="_blank">http://handssys.com/</a>
+                                    <a href="http://handssys.com/" target="_blank"><i class="fa-solid fa-link"></i>http://handssys.com/</a>
                                 </span>
                             </span>
                         </span>
@@ -678,11 +686,11 @@
                         </span>
                         <span class="project-details">
                             <span class="location">
-                                <span>Hyderabad</span>
+                                <span><i class="fa-solid fa-location-dot"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
                                     <span></span>
-                                    <a href="http://handssys.com/" target="_blank">http://handssys.com/</a>
+                                    <a href="http://handssys.com/" target="_blank"><i class="fa-solid fa-link"></i>http://handssys.com/</a>
                                 </span>
                             </span>
                         </span>
