Updated sslc completed year

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="academic row">
                 <div class="col-md-4">
                     <h4>Karnataka Secondary Education Examination Board</h4>
-                    <p>Oct 2010 to July 2014</p>
+                    <p>Oct 2007 to July 2008</p>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -255,6 +255,12 @@
                             <span class="skills-title">Python</span>
                             <span class="skills-score">
                                 <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="skills-title">Motoko</span>
+                            <span class="skills-score">
+                                <span class="">&#9733; &#9733; &#9734; &#9734; &#9734;</span>
                             </span>
                         </li>
                         <h6>Automation Tools</h6>
