--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
         <p>Senior Software Development Engineer in Test</p>
         <img height="246px" width="246px" src="images/bhargavkumar.png" alt="My Image">
     </div>
-    <div class="middle-container">
-
-    </div>
-    <div class="bottom-container">
-    </div>
     <div id="experiences" class="container">
         <h2>Work Experience</h2>
         <hr>
@@ -62,7 +57,7 @@
                                 <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
-                                    <span></span>
+                                    <!-- <span></span> -->
                                     <a href="https://unifytech.com/home" target="_blank"><i
                                             class="fa-solid fa-link fw"></i>https://unifytech.com/home</a>
                                 </span>
@@ -143,7 +138,7 @@
                     </div>
                     <div class="col-md-8">
                         <p>
-                            <strong>Aeronautical Engineering</strong>
+                            <strong>Bachelor of Technology - Aeronautical Engineering</strong>
                             <span class="hidden-phone academic-summary">
                                 <p>Marks(%) - 70</p>
                                 <p>Full Time</p>
@@ -171,14 +166,14 @@
                     </div>
                     <div class="col-md-8">
                         <p>
-                            <strong>MPC - Maths, Physics and Chemistry</strong>
+                            <strong>MPC / 12th - Maths, Physics and Chemistry</strong>
                             <span class="hidden-phone academic-summary">
                                 <p>Marks(%) - 82.5</p>
                                 <p>Full Time</p>
                             </span>
                             <span class="academic-details">
                                 <span class="location">
-                                    <span><i class="fa-solid fa-location-dot"></i>Tirupati</span>
+                                    <span><i class="fa-solid fa-location-dot fw"></i>Tirupati</span>
                                     <span class="separator">|</span>
                                     <span class="link">
                                         <span></span>
@@ -193,11 +188,11 @@
                 <div class="academic row">
                     <div class="col-md-4">
                         <h4>Karnataka Secondary Education Examination Board</h4>
-                        <p>Oct 2007 to July 2008</p>
+                        <p>Jun 2007 to May 2008</p>
                     </div>
                     <div class="col-md-8">
                         <p>
-                            <strong>SSLC - Secondary School Leaving Certificate</strong>
+                            <strong>SSLC / 10th - Secondary School Leaving Certificate</strong>
                             <span class="hidden-phone academic-summary">
                                 <p>Marks(%) - 74</p>
                                 <p>Full Time</p>
