Updated roles and responsibilities

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
     <div class="nav-container">
         <nav class="nav navbar-light sticky-top">
-            <a class="nav-link active" href="#experiences">Work Experience</a>
-            <a class="nav-link" href="#education">Education</a>
-            <a class="nav-link" href="#technicalSkills">Technical Skills</a>
-            <a class="nav-link" href="#projects">Projects</a>
-            <a class="nav-link" href="#contact">Contacts</a>
+            <a class="nav-link active" href="#experiences">WORK EXPERIENCE</a>
+            <a class="nav-link" href="#education">EDUCATION</a>
+            <a class="nav-link" href="#technicalSkills">TECHNICAL SKILLS</a>
+            <a class="nav-link" href="#projects">PROJECTS</a>
+            <a class="nav-link" href="#contact">CONTACTS</a>
         </nav>
     </div>
     <div class="top-container">
@@ -50,14 +50,17 @@
                         <strong>Sr. Software Development Engineer in Test</strong>
                         <span class="hidden-phone experience-summary">
                             Currently, I am working as a Sr.SDET in UNIFY tech. My current Project is StockX ECommerce.
-                            Using tools and technologies are JavaSCript, Typescript, WebDriverIO, Appium, Puppeteer,
+                            As a QE,
+                            I am responsible for both frontend and backend manual and automation testing.
+                            He we are using tools and technologies are JavaScript, Typescript, NodeJS, WebDriverIO,
+                            Appium,
+                            Puppeteer, Cucumber, Jest, Postman, AWS, Saucelabs, Axios, Python, CircleCI etc.
                         </span>
                         <span class="experience-details">
                             <span class="location">
                                 <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
                                 <span class="separator">|</span>
                                 <span class="link">
-                                    <!-- <span></span> -->
                                     <a href="https://unifytech.com/home" target="_blank"><i
                                             class="fa-solid fa-link fw"></i>https://unifytech.com/home</a>
                                 </span>
@@ -77,8 +80,10 @@
                     <p>
                         <strong>Sr. Test Automation Engineer</strong>
                         <span class="hidden-phone experience-summary">
-                            Worked as a Senior Test Automation Engineer in ZenQ, worked for several projects including
-                            retail and Ecommerce applications
+                            Worked as a Senior Test Automation Engineer in ZenQ, Here I worked for several projects
+                            including
+                            retail and Ecommerce applications. Designed 2 Automation frameworks for both FE & BE from
+                            scratch on nodejs platform.
                         </span>
                         <span class="experience-details">
                             <span class="location">
@@ -105,8 +110,7 @@
                     <p>
                         <strong>Test Engineer</strong>
                         <span class="hidden-phone experience-summary">
-                            Started career in this organization as a Test Associate, and promoted to Test Engineer.
-                            Worked on health care project
+                            Started career in Handssys as a Test Associate, and promoted to Test Engineer.
                         </span>
                         <span class="experience-details">
                             <span class="location">
@@ -387,6 +391,13 @@
                         <span class="skills-title">Gradle</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                        </span>
+                    </li>
+                    <h6>Cloud computing platform</h6>
+                    <li>
+                        <span class="skills-title">Amazon Web Services</span>
+                        <span class="skills-score">
+                            <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
                     </li>
                 </ul>
