Add new class nav bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="nav-container">
-        <nav class="nav navbar-light sticky-top">
+        <nav class="nav navbar-light sticky-top navbar-collapse">
             <a class="nav-link active" href="#experiences">WORK EXPERIENCE</a>
             <a class="nav-link" href="#education">EDUCATION</a>
             <a class="nav-link" href="#technicalSkills">TECHNICAL SKILLS</a>
