Add new class nav bar

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Build automation Tools</h6>
+                    <h6>Build Automation Tools</h6>
                     <li>
                         <span class="skills-title">Maven</span>
                         <span class="skills-score">
@@ -393,9 +393,9 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Cloud computing platform</h6>
+                    <h6>Cloud Computing Tool</h6>
                     <li>
-                        <span class="skills-title">Amazon Web Services</span>
+                        <span class="skills-title">Amazon Web Services (AWS)</span>
                         <span class="skills-score">
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
                         </span>
@@ -442,7 +442,7 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Code management tools</h6>
+                    <h6>Code Management Tools</h6>
                     <li>
                         <span class="skills-title">GitHub</span>
                         <span class="skills-score">
@@ -455,7 +455,7 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Cloud-based testing tools</h6>
+                    <h6>Cloud Automation Testing Tools</h6>
                     <li>
                         <span class="skills-title">SauceLabs</span>
                         <span class="skills-score">
@@ -521,7 +521,7 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Self-learned </h6>
+                    <h6>Self-learned</h6>
                     <li>
                         <span class="skills-title">ExpressJS</span>
                         <span class="skills-score">
