--- a/index.html
+++ b/index.html
@@ -37,93 +37,95 @@
         <h2>Work Experience</h2>
         <hr>
         <h3>Careers</h3>
-        <div class="experiences">
+        <div class="row">
+            <div class="experiences">
 
-            <div class="experience row">
-                <div class="col-md-4">
-                    <h4>Unify Technologies Pvt Ltd.</h4>
-                    <p>May 2020 to Till Date</p>
-                    <p>Full Time</p>
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        <strong>Sr. Software Development Engineer in Test</strong>
-                        <span class="hidden-phone experience-summary">
-                            Currently, I am working as a Sr.SDET in UNIFY tech. My current Project is StockX ECommerce.
-                            As a QE,
-                            I am responsible for both frontend and backend manual and automation testing.
-                            He we are using tools and technologies are JavaScript, Typescript, NodeJS, WebDriverIO,
-                            Appium,
-                            Puppeteer, Cucumber, Jest, Postman, AWS, Saucelabs, Axios, Python, CircleCI etc.
-                        </span>
-                        <span class="experience-details">
-                            <span class="location">
-                                <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
-                                <span class="separator">|</span>
-                                <span class="link">
-                                    <a href="https://unifytech.com/home" target="_blank"><i
-                                            class="fa-solid fa-link fw"></i>https://unifytech.com/home</a>
+                <div class="experience row">
+                    <div class="col-md-4">
+                        <h4>Unify Technologies Pvt Ltd.</h4>
+                        <p>May 2020 to Till Date</p>
+                        <p>Full Time</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Sr. Software Development Engineer in Test</strong>
+                            <span class="experience-summary">
+                                Currently, I am working as a Sr.SDET in UNIFY tech. My current Project is StockX
+                                ECommerce. As a QE, I am responsible for both frontend and backend manual and automation
+                                testing. He we are using tools and technologies are JavaScript, Typescript, NodeJS,
+                                WebDriverIO, Appium, Puppeteer, Cucumber, Jest, Postman, AWS, Saucelabs, Axios, Python,
+                                CircleCI etc.
+                            </span>
+                            <span class="experience-details">
+                                <span class="location">
+                                    <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
+                                    <span class="separator">|</span>
+                                    <span class="link">
+                                        <a href="https://unifytech.com/home" target="_blank"><i
+                                                class="fa-solid fa-link fw"></i>https://unifytech.com/home</a>
+                                    </span>
                                 </span>
                             </span>
-                        </span>
-                    </p>
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="experience row">
-                <div class="col-md-4">
-                    <h4>Zen Quality Assurance Pvt. Ltd.</h4>
-                    <p>Aug 2018 to May 2020</p>
-                    <p>Full Time</p>
+                <div class="experience row">
+                    <div class="col-md-4">
+                        <h4>Zen Quality Assurance Pvt. Ltd.</h4>
+                        <p>Aug 2018 to May 2020</p>
+                        <p>Full Time</p>
 
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        <strong>Sr. Test Automation Engineer</strong>
-                        <span class="hidden-phone experience-summary">
-                            Worked as a Senior Test Automation Engineer in ZenQ, Here I worked for several projects
-                            including
-                            retail and Ecommerce applications. Designed 2 Automation frameworks for both FE & BE from
-                            scratch on nodejs platform.
-                        </span>
-                        <span class="experience-details">
-                            <span class="location">
-                                <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
-                                <span class="separator">|</span>
-                                <span class="link">
-                                    <span></span>
-                                    <a href="https://www.zenq.com/" target="_blank"><i
-                                            class="fa-solid fa-link fw"></i>https://www.zenq.com/</a>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Sr. Test Automation Engineer</strong>
+                            <span class="experience-summary">
+                                Worked as a Senior Test Automation Engineer in ZenQ, Here I worked for several projects
+                                including
+                                retail and Ecommerce applications. Designed 2 Automation frameworks for both FE & BE
+                                from
+                                scratch on nodejs platform.
+                            </span>
+                            <span class="experience-details">
+                                <span class="location">
+                                    <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
+                                    <span class="separator">|</span>
+                                    <span class="link">
+                                        <span></span>
+                                        <a href="https://www.zenq.com/" target="_blank"><i
+                                                class="fa-solid fa-link fw"></i>https://www.zenq.com/</a>
+                                    </span>
                                 </span>
                             </span>
-                        </span>
-                    </p>
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="experience row">
-                <div class="col-md-4">
-                    <h4>Handssys Software Tecnologies Pvt. Ltd.</h4>
-                    <p>May 2015 to July 31</p>
-                    <p>Full Time</p>
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        <strong>Test Engineer</strong>
-                        <span class="hidden-phone experience-summary">
-                            Started career in Handssys as a Test Associate, and promoted to Test Engineer.
-                        </span>
-                        <span class="experience-details">
-                            <span class="location">
-                                <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
-                                <span class="separator">|</span>
-                                <span class="link">
-                                    <span></span>
-                                    <a href="http://handssys.com/" target="_blank"><i
-                                            class="fa-solid fa-link fw"></i>http://handssys.com/</a>
+                <div class="experience row">
+                    <div class="col-md-4">
+                        <h4>Handssys Software Tecnologies Pvt. Ltd.</h4>
+                        <p>May 2015 to July 31</p>
+                        <p>Full Time</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Test Engineer</strong>
+                            <span class="experience-summary">
+                                Started career in Handssys as a Test Associate, and promoted to Test Engineer.
+                            </span>
+                            <span class="experience-details">
+                                <span class="location">
+                                    <span><i class="fa-solid fa-location-dot fw"></i>Hyderabad</span>
+                                    <span class="separator">|</span>
+                                    <span class="link">
+                                        <span></span>
+                                        <a href="http://handssys.com/" target="_blank"><i
+                                                class="fa-solid fa-link fw"></i>http://handssys.com/</a>
+                                    </span>
                                 </span>
                             </span>
-                        </span>
-                    </p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -143,7 +145,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>Bachelor of Technology - Aeronautical Engineering</strong>
-                            <span class="hidden-phone academic-summary">
+                            <span class="academic-summary">
                                 <p>Marks(%) - 70</p>
                                 <p>Full Time</p>
                             </span>
@@ -171,7 +173,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>MPC / 12th - Maths, Physics and Chemistry</strong>
-                            <span class="hidden-phone academic-summary">
+                            <span class="academic-summary">
                                 <p>Marks(%) - 82.5</p>
                                 <p>Full Time</p>
                             </span>
@@ -197,7 +199,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>SSLC / 10th - Secondary School Leaving Certificate</strong>
-                            <span class="hidden-phone academic-summary">
+                            <span class="academic-summary">
                                 <p>Marks(%) - 74</p>
                                 <p>Full Time</p>
                             </span>
@@ -312,7 +314,7 @@
                             <span class="">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
                         </span>
                     </li>
-                    <h6>Rest API automation tools</h6>
+                    <h6>Rest API Automation Tools</h6>
                     <li>
                         <span class="skills-title">Rest Assured</span>
                         <span class="skills-score">
@@ -582,7 +584,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>Sr. Software Development Engineer in Test</strong>
-                            <span class="hidden-phone project-summary">
+                            <span class="project-summary">
                             </span>
                             <span class="project-details">
                                 <span class="location">
@@ -608,7 +610,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>Sr. Test Automation Engineer</strong>
-                            <span class="hidden-phone project-summary">
+                            <span class="project-summary">
 
                             </span>
                             <span class="project-details">
@@ -636,7 +638,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>Test Automation Engineer</strong>
-                            <span class="hidden-phone project-summary">
+                            <span class="project-summary">
 
                             </span>
                             <span class="project-details">
@@ -663,7 +665,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>Test Engineer</strong>
-                            <span class="hidden-phone project-summary">
+                            <span class="project-summary">
 
                             </span>
                             <span class="project-details">
@@ -689,7 +691,7 @@
                     <div class="col-md-8">
                         <p>
                             <strong>Test Engineer</strong>
-                            <span class="hidden-phone project-summary">
+                            <span class="project-summary">
 
                             </span>
                             <span class="project-details">
